--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>WasteNot</title>
     <link rel="stylesheet" href="style.css" />
+
+
     
 </head>
 <body>
@@ -17,21 +19,8 @@
         <button onclick="addItem()">Add Item</button>
     </div>
     <hr />
-    <div id="mapBox" style="margin-top: 20px;">
-        <input id="location" placeholder="Enter your location" />
-        <button onclick="showMap()">Show Nearby Donation Centers</button>
-        <h3>Nearby Donation Centers</h3>
-        <iframe
-        id="mapFrame"
-        width="100%"
-        height="300"
-        style="border: 2px; border-color: black;"
-        loading="lazy"
-        allowfullscreen>
-        </iframe>
-    </div>
-
-    <div id="itemList"></div>
+    
+    <a href="items.html"><button>View My Items</button></a>
     <script src="script.js"></script>
 </body>
 </html>
